// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProjectAdminConsultationStepForm /> renders correctly with data 1`] = `
<Fragment>
  <ProjectAdminFormstyle__ProjectBoxHeader>
    <h5>
      <FormattedMessage
        id="global.consultation"
        values={Object {}}
      />
    </h5>
  </ProjectAdminFormstyle__ProjectBoxHeader>
  <Field
    aria-autocomplete="list"
    aria-haspopup="true"
    autoload={true}
    cacheOptions={true}
    clearable={true}
    component={[Function]}
    debounce={true}
    defaultOptions={true}
    id="step-consultations"
    inputClassName="fake-inputClassName"
    label={
      <FormattedMessage
        id="one-or-more-consultation-step"
        values={Object {}}
      />
    }
    labelClassName="control-label"
    loadOptions={[Function]}
    multi={true}
    name="consultations"
    placeholder=" "
    role="combobox"
    selectFieldIsObject={true}
  />
  <ProjectAdminFormstyle__ProjectBoxHeader>
    <h5>
      <FormattedMessage
        id="requirements"
        values={Object {}}
      />
    </h5>
  </ProjectAdminFormstyle__ProjectBoxHeader>
  <FieldArray
    component={
      Object {
        "$$typeof": Symbol(react.memo),
        "WrappedComponent": [Function],
        "__docgenInfo": Object {
          "composes": Array [
            "ReduxFormFieldArrayProps",
          ],
          "description": "",
          "displayName": "StepRequirementsList",
          "methods": Array [],
          "props": Object {
            "dispatch": Object {
              "description": "",
              "flowType": Object {
                "name": "Dispatch",
              },
              "required": true,
            },
            "formName": Object {
              "description": "",
              "flowType": Object {
                "name": "string",
              },
              "required": true,
            },
            "meta": Object {
              "description": "",
              "flowType": Object {
                "name": "signature",
                "raw": "{| error: ?string |}",
                "signature": Object {
                  "properties": Array [
                    Object {
                      "key": "error",
                      "value": Object {
                        "name": "string",
                        "nullable": true,
                        "required": true,
                      },
                    },
                  ],
                },
                "type": "object",
              },
              "required": false,
            },
            "onInputChange": Object {
              "description": "",
              "flowType": Object {
                "name": "signature",
                "raw": "(value: string, field: string, requirement: Requirement) => void",
                "signature": Object {
                  "arguments": Array [
                    Object {
                      "name": "value",
                      "type": Object {
                        "name": "string",
                      },
                    },
                    Object {
                      "name": "field",
                      "type": Object {
                        "name": "string",
                      },
                    },
                    Object {
                      "name": "requirement",
                      "type": Object {
                        "name": "signature",
                        "raw": "{|
  type: RequirementType | string,
  checked?: boolean,
  label?: ?string,
  id?: ?string,
  uniqueId?: ?string,
|}",
                        "signature": Object {
                          "properties": Array [
                            Object {
                              "key": "type",
                              "value": Object {
                                "elements": Array [
                                  Object {
                                    "name": "RequirementType",
                                  },
                                  Object {
                                    "name": "string",
                                  },
                                ],
                                "name": "union",
                                "raw": "RequirementType | string",
                                "required": true,
                              },
                            },
                            Object {
                              "key": "checked",
                              "value": Object {
                                "name": "boolean",
                                "required": false,
                              },
                            },
                            Object {
                              "key": "label",
                              "value": Object {
                                "name": "string",
                                "nullable": true,
                                "required": false,
                              },
                            },
                            Object {
                              "key": "id",
                              "value": Object {
                                "name": "string",
                                "nullable": true,
                                "required": false,
                              },
                            },
                            Object {
                              "key": "uniqueId",
                              "value": Object {
                                "name": "string",
                                "nullable": true,
                                "required": false,
                              },
                            },
                          ],
                        },
                        "type": "object",
                      },
                    },
                  ],
                  "return": Object {
                    "name": "void",
                  },
                },
                "type": "function",
              },
              "required": true,
            },
            "onInputCheck": Object {
              "description": "",
              "flowType": Object {
                "name": "signature",
                "raw": "(value: boolean, field: string, requirement: Requirement) => void",
                "signature": Object {
                  "arguments": Array [
                    Object {
                      "name": "value",
                      "type": Object {
                        "name": "boolean",
                      },
                    },
                    Object {
                      "name": "field",
                      "type": Object {
                        "name": "string",
                      },
                    },
                    Object {
                      "name": "requirement",
                      "type": Object {
                        "name": "signature",
                        "raw": "{|
  type: RequirementType | string,
  checked?: boolean,
  label?: ?string,
  id?: ?string,
  uniqueId?: ?string,
|}",
                        "signature": Object {
                          "properties": Array [
                            Object {
                              "key": "type",
                              "value": Object {
                                "elements": Array [
                                  Object {
                                    "name": "RequirementType",
                                  },
                                  Object {
                                    "name": "string",
                                  },
                                ],
                                "name": "union",
                                "raw": "RequirementType | string",
                                "required": true,
                              },
                            },
                            Object {
                              "key": "checked",
                              "value": Object {
                                "name": "boolean",
                                "required": false,
                              },
                            },
                            Object {
                              "key": "label",
                              "value": Object {
                                "name": "string",
                                "nullable": true,
                                "required": false,
                              },
                            },
                            Object {
                              "key": "id",
                              "value": Object {
                                "name": "string",
                                "nullable": true,
                                "required": false,
                              },
                            },
                            Object {
                              "key": "uniqueId",
                              "value": Object {
                                "name": "string",
                                "nullable": true,
                                "required": false,
                              },
                            },
                          ],
                        },
                        "type": "object",
                      },
                    },
                  ],
                  "return": Object {
                    "name": "void",
                  },
                },
                "type": "function",
              },
              "required": true,
            },
            "onInputDelete": Object {
              "description": "",
              "flowType": Object {
                "name": "signature",
                "raw": "(index: number) => void",
                "signature": Object {
                  "arguments": Array [
                    Object {
                      "name": "index",
                      "type": Object {
                        "name": "number",
                      },
                    },
                  ],
                  "return": Object {
                    "name": "void",
                  },
                },
                "type": "function",
              },
              "required": true,
            },
            "requirements": Object {
              "description": "",
              "flowType": Object {
                "elements": Array [
                  Object {
                    "name": "signature",
                    "raw": "{|
  type: RequirementType | string,
  checked?: boolean,
  label?: ?string,
  id?: ?string,
  uniqueId?: ?string,
|}",
                    "signature": Object {
                      "properties": Array [
                        Object {
                          "key": "type",
                          "value": Object {
                            "elements": Array [
                              Object {
                                "name": "RequirementType",
                              },
                              Object {
                                "name": "string",
                              },
                            ],
                            "name": "union",
                            "raw": "RequirementType | string",
                            "required": true,
                          },
                        },
                        Object {
                          "key": "checked",
                          "value": Object {
                            "name": "boolean",
                            "required": false,
                          },
                        },
                        Object {
                          "key": "label",
                          "value": Object {
                            "name": "string",
                            "nullable": true,
                            "required": false,
                          },
                        },
                        Object {
                          "key": "id",
                          "value": Object {
                            "name": "string",
                            "nullable": true,
                            "required": false,
                          },
                        },
                        Object {
                          "key": "uniqueId",
                          "value": Object {
                            "name": "string",
                            "nullable": true,
                            "required": false,
                          },
                        },
                      ],
                    },
                    "type": "object",
                  },
                ],
                "name": "Array",
                "raw": "Array<Requirement>",
              },
              "required": true,
            },
          },
        },
        "compare": null,
        "displayName": "Connect(StepRequirementsList)",
        "type": [Function],
      }
    }
    formName="stepForm"
    name="requirements"
    requirements={
      Array [
        Object {
          "checked": false,
          "label": "Sku",
          "type": "CHECKBOX",
        },
      ]
    }
  />
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="primary"
    className="btn-outline-primary box-content__toolbar mb-20"
    disabled={false}
    id="js-btn-create-step"
    onClick={[Function]}
  >
    <i
      className="fa fa-plus-circle"
    />
     
    <FormattedMessage
      id="global.add"
      values={Object {}}
    />
  </Button>
  <Field
    component={[Function]}
    id="step-requirementsReason"
    label={
      <FormattedMessage
        id="reason-for-collection"
        values={Object {}}
      />
    }
    name="requirementsReason"
    type="editor"
  />
</Fragment>
`;

exports[`<ProjectAdminConsultationStepForm /> renders correctly with no initial data 1`] = `
<Fragment>
  <ProjectAdminFormstyle__ProjectBoxHeader>
    <h5>
      <FormattedMessage
        id="global.consultation"
        values={Object {}}
      />
    </h5>
  </ProjectAdminFormstyle__ProjectBoxHeader>
  <Field
    aria-autocomplete="list"
    aria-haspopup="true"
    autoload={true}
    cacheOptions={true}
    clearable={true}
    component={[Function]}
    debounce={true}
    defaultOptions={true}
    id="step-consultations"
    inputClassName="fake-inputClassName"
    label={
      <FormattedMessage
        id="one-or-more-consultation-step"
        values={Object {}}
      />
    }
    labelClassName="control-label"
    loadOptions={[Function]}
    multi={true}
    name="consultations"
    placeholder=" "
    role="combobox"
    selectFieldIsObject={true}
  />
  <ProjectAdminFormstyle__ProjectBoxHeader>
    <h5>
      <FormattedMessage
        id="requirements"
        values={Object {}}
      />
    </h5>
  </ProjectAdminFormstyle__ProjectBoxHeader>
  <FieldArray
    component={
      Object {
        "$$typeof": Symbol(react.memo),
        "WrappedComponent": [Function],
        "__docgenInfo": Object {
          "composes": Array [
            "ReduxFormFieldArrayProps",
          ],
          "description": "",
          "displayName": "StepRequirementsList",
          "methods": Array [],
          "props": Object {
            "dispatch": Object {
              "description": "",
              "flowType": Object {
                "name": "Dispatch",
              },
              "required": true,
            },
            "formName": Object {
              "description": "",
              "flowType": Object {
                "name": "string",
              },
              "required": true,
            },
            "meta": Object {
              "description": "",
              "flowType": Object {
                "name": "signature",
                "raw": "{| error: ?string |}",
                "signature": Object {
                  "properties": Array [
                    Object {
                      "key": "error",
                      "value": Object {
                        "name": "string",
                        "nullable": true,
                        "required": true,
                      },
                    },
                  ],
                },
                "type": "object",
              },
              "required": false,
            },
            "onInputChange": Object {
              "description": "",
              "flowType": Object {
                "name": "signature",
                "raw": "(value: string, field: string, requirement: Requirement) => void",
                "signature": Object {
                  "arguments": Array [
                    Object {
                      "name": "value",
                      "type": Object {
                        "name": "string",
                      },
                    },
                    Object {
                      "name": "field",
                      "type": Object {
                        "name": "string",
                      },
                    },
                    Object {
                      "name": "requirement",
                      "type": Object {
                        "name": "signature",
                        "raw": "{|
  type: RequirementType | string,
  checked?: boolean,
  label?: ?string,
  id?: ?string,
  uniqueId?: ?string,
|}",
                        "signature": Object {
                          "properties": Array [
                            Object {
                              "key": "type",
                              "value": Object {
                                "elements": Array [
                                  Object {
                                    "name": "RequirementType",
                                  },
                                  Object {
                                    "name": "string",
                                  },
                                ],
                                "name": "union",
                                "raw": "RequirementType | string",
                                "required": true,
                              },
                            },
                            Object {
                              "key": "checked",
                              "value": Object {
                                "name": "boolean",
                                "required": false,
                              },
                            },
                            Object {
                              "key": "label",
                              "value": Object {
                                "name": "string",
                                "nullable": true,
                                "required": false,
                              },
                            },
                            Object {
                              "key": "id",
                              "value": Object {
                                "name": "string",
                                "nullable": true,
                                "required": false,
                              },
                            },
                            Object {
                              "key": "uniqueId",
                              "value": Object {
                                "name": "string",
                                "nullable": true,
                                "required": false,
                              },
                            },
                          ],
                        },
                        "type": "object",
                      },
                    },
                  ],
                  "return": Object {
                    "name": "void",
                  },
                },
                "type": "function",
              },
              "required": true,
            },
            "onInputCheck": Object {
              "description": "",
              "flowType": Object {
                "name": "signature",
                "raw": "(value: boolean, field: string, requirement: Requirement) => void",
                "signature": Object {
                  "arguments": Array [
                    Object {
                      "name": "value",
                      "type": Object {
                        "name": "boolean",
                      },
                    },
                    Object {
                      "name": "field",
                      "type": Object {
                        "name": "string",
                      },
                    },
                    Object {
                      "name": "requirement",
                      "type": Object {
                        "name": "signature",
                        "raw": "{|
  type: RequirementType | string,
  checked?: boolean,
  label?: ?string,
  id?: ?string,
  uniqueId?: ?string,
|}",
                        "signature": Object {
                          "properties": Array [
                            Object {
                              "key": "type",
                              "value": Object {
                                "elements": Array [
                                  Object {
                                    "name": "RequirementType",
                                  },
                                  Object {
                                    "name": "string",
                                  },
                                ],
                                "name": "union",
                                "raw": "RequirementType | string",
                                "required": true,
                              },
                            },
                            Object {
                              "key": "checked",
                              "value": Object {
                                "name": "boolean",
                                "required": false,
                              },
                            },
                            Object {
                              "key": "label",
                              "value": Object {
                                "name": "string",
                                "nullable": true,
                                "required": false,
                              },
                            },
                            Object {
                              "key": "id",
                              "value": Object {
                                "name": "string",
                                "nullable": true,
                                "required": false,
                              },
                            },
                            Object {
                              "key": "uniqueId",
                              "value": Object {
                                "name": "string",
                                "nullable": true,
                                "required": false,
                              },
                            },
                          ],
                        },
                        "type": "object",
                      },
                    },
                  ],
                  "return": Object {
                    "name": "void",
                  },
                },
                "type": "function",
              },
              "required": true,
            },
            "onInputDelete": Object {
              "description": "",
              "flowType": Object {
                "name": "signature",
                "raw": "(index: number) => void",
                "signature": Object {
                  "arguments": Array [
                    Object {
                      "name": "index",
                      "type": Object {
                        "name": "number",
                      },
                    },
                  ],
                  "return": Object {
                    "name": "void",
                  },
                },
                "type": "function",
              },
              "required": true,
            },
            "requirements": Object {
              "description": "",
              "flowType": Object {
                "elements": Array [
                  Object {
                    "name": "signature",
                    "raw": "{|
  type: RequirementType | string,
  checked?: boolean,
  label?: ?string,
  id?: ?string,
  uniqueId?: ?string,
|}",
                    "signature": Object {
                      "properties": Array [
                        Object {
                          "key": "type",
                          "value": Object {
                            "elements": Array [
                              Object {
                                "name": "RequirementType",
                              },
                              Object {
                                "name": "string",
                              },
                            ],
                            "name": "union",
                            "raw": "RequirementType | string",
                            "required": true,
                          },
                        },
                        Object {
                          "key": "checked",
                          "value": Object {
                            "name": "boolean",
                            "required": false,
                          },
                        },
                        Object {
                          "key": "label",
                          "value": Object {
                            "name": "string",
                            "nullable": true,
                            "required": false,
                          },
                        },
                        Object {
                          "key": "id",
                          "value": Object {
                            "name": "string",
                            "nullable": true,
                            "required": false,
                          },
                        },
                        Object {
                          "key": "uniqueId",
                          "value": Object {
                            "name": "string",
                            "nullable": true,
                            "required": false,
                          },
                        },
                      ],
                    },
                    "type": "object",
                  },
                ],
                "name": "Array",
                "raw": "Array<Requirement>",
              },
              "required": true,
            },
          },
        },
        "compare": null,
        "displayName": "Connect(StepRequirementsList)",
        "type": [Function],
      }
    }
    formName="stepForm"
    name="requirements"
  />
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="primary"
    className="btn-outline-primary box-content__toolbar mb-20"
    disabled={false}
    id="js-btn-create-step"
    onClick={[Function]}
  >
    <i
      className="fa fa-plus-circle"
    />
     
    <FormattedMessage
      id="global.add"
      values={Object {}}
    />
  </Button>
  <Field
    component={[Function]}
    id="step-requirementsReason"
    label={
      <FormattedMessage
        id="reason-for-collection"
        values={Object {}}
      />
    }
    name="requirementsReason"
    type="editor"
  />
</Fragment>
`;
